--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,3 +18,14 @@ deploy:
   api_key:
     secure: pI6WWkSGlLdvpdtDo1sMqeQ3ReWjnCgUtKKrXIZBpJv81xMuhzTygUTTHRK20RXi
   symbol_server: https://www.myget.org/F/ilyaf-test-packages/symbols/api/v2/package
+  on:
+    branch: develop
+    appveyor_repo_tag: true
+
+- provider: NuGet
+  server: https://www.myget.org/F/ilyaf-test-packages/api/v2/package
+  api_key:
+    secure: pI6WWkSGlLdvpdtDo1sMqeQ3ReWjnCgUtKKrXIZBpJv81xMuhzTygUTTHRK20RXi
+  symbol_server: https://www.myget.org/F/ilyaf-test-packages/symbols/api/v2/package
+  on:
+    appveyor_repo_tag: true
