--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,5 @@ deploy:
     secure: pI6WWkSGlLdvpdtDo1sMqeQ3ReWjnCgUtKKrXIZBpJv81xMuhzTygUTTHRK20RXi
   symbol_server: https://www.myget.org/F/ilyaf-test-packages/symbols/api/v2/package
   on:
-    branch: 
-      - develop      
+    branch: develop      
     appveyor_repo_tag: true
