--- a/nuget-core-repro.yml
+++ b/nuget-core-repro.yml
@@ -7,9 +7,8 @@ build:
   verbosity: minimal
 
 after_build:
-- ps: write-host "APPVEYOR_BUILD_NUMBER: $env:APPVEYOR_BUILD_NUMBER"
-- ps: idotnet pack src\dotnetcore-nuget -o .\Artifacts --version-suffix=$env:APPVEYOR_BUILD_NUMBER
+- ps: write-host "APPVEYOR_BUILD_NUMBER $env:APPVEYOR_BUILD_NUMBER"
+- ps: dotnet pack src\dotnetcore-nuget -o .\Artifacts --version-suffix=$env:APPVEYOR_BUILD_NUMBER
 
 artifacts:
 - path: .\Artifacts\*
-
